--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "vue-mpa-project-template",
   "version": "0.1.0",
-  "description": "Vue 多页应用移动端 H5 项目架构模版，基于：vue-cli@4, vue@2, vue-router@3, vuex@3, sass(scss), eslint, stylelint, babel, postcss-pxtorem",
   "private": true,
+  "description": "Vue 多页应用移动端 H5 项目架构模版，基于：vue-cli@4, vue@2, vue-router@3, vuex@3, sass(scss), eslint, stylelint, babel, postcss-pxtorem",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -19,11 +19,11 @@
   "devDependencies": {
     "@commitlint/cli": "^9.1.1",
     "@commitlint/config-conventional": "^9.1.1",
-    "@vue/cli-plugin-babel": "~4.4.6",
-    "@vue/cli-plugin-eslint": "~4.4.6",
-    "@vue/cli-plugin-router": "~4.4.6",
-    "@vue/cli-plugin-vuex": "~4.4.6",
-    "@vue/cli-service": "~4.4.6",
+    "@vue/cli-plugin-babel": "^4.5.7",
+    "@vue/cli-plugin-eslint": "^4.5.7",
+    "@vue/cli-plugin-router": "^4.5.7",
+    "@vue/cli-plugin-vuex": "^4.5.7",
+    "@vue/cli-service": "^4.5.7",
     "@vue/eslint-config-standard": "^5.1.2",
     "babel-eslint": "^10.1.0",
     "babel-plugin-import": "^1.13.0",
