--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "core-js": "^3.6.5",
-    "normalize.css": "^8.0.1",
-    "vant": "^2.10.1",
-    "vue": "^2.6.11",
-    "vue-router": "^3.3.4",
+    "vant": "^2.10.9",
+    "vue": "^2.6.12",
+    "vue-router": "^3.4.6",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
@@ -44,7 +44,7 @@
     "stylelint": "^13.6.1",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-scss": "^3.18.0",
-    "vue-template-compiler": "^2.6.11",
+    "vue-template-compiler": "^2.6.12",
     "webpack-bundle-analyzer": "^3.8.0"
   },
   "config": {
